# zt-edge

./: Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: public-sdk-boundary.yml
crates/rshome-actor/: Cargo.toml
crates/rshome-actor/src/: actor.rs  actor_ref.rs  context.rs  lib.rs  mailbox.rs  pipe.rs  supervisor.rs  system.rs
crates/rshome-actor/tests/: actor_tests.rs
crates/rshome-codegen/: Cargo.toml
crates/rshome-codegen/src/: board_yaml.rs  brookesia.rs  cmake.rs  error.rs  generator.rs  ha_adapter.rs  lib.rs  sdkconfig.rs
crates/rshome-codegen/templates/brookesia/: app_composition.cpp.tera  app_composition.h  main.cpp.tera
crates/rshome-codegen/templates/partitions/: default_16mb.csv
crates/rshome-codegen/tests/: public_generator.rs
crates/rshome-config/: Cargo.toml
crates/rshome-config/src/: error.rs  export.rs  lib.rs  pipeline.rs  raw.rs  sigrok.rs  validated.rs  wasm_bindings.rs
crates/rshome-config/src/stages/: mod.rs  s10_pin_conflicts.rs  s11_exclusive_groups.rs  s12_profile_validation.rs  s13_secret_fields.rs  s1_package_merge.rs  s2_substitutions.rs  s3_5_variant_resolution.rs  s3_extend_remove.rs  s4_external_components.rs  s5_preload.rs  s6_load_components.rs  s7_schema_validation.rs  s8_id_resolution.rs  s9_final_validation.rs
crates/rshome-device-link/: Cargo.toml
crates/rshome-device-link/src/: bindings.rs  commands.rs  discovery.rs  error.rs  ingest.rs  lib.rs  manager.rs  noise_transport.rs  security.rs  session.rs
crates/rshome-device-link/tests/: session_tests.rs
crates/rshome-entity/: Cargo.toml
crates/rshome-entity/src/: device_actor.rs  device_manager.rs  entity_actor.rs  entity_id.rs  entity_state.rs  lib.rs  messages.rs  registry.rs  state_updater.rs
crates/rshome-entity/src/domains/: alarm_panel.rs  binary_sensor.rs  button.rs  climate.rs  cover.rs  event.rs  fan.rs  light.rs  lock.rs  media_player.rs  mod.rs  number.rs  select.rs  sensor.rs  spec.rs  switch.rs  text.rs  text_sensor.rs  update.rs
crates/rshome-entity/tests/: domain_registry.rs  entity_tests.rs
crates/rshome-mcp/: Cargo.toml
crates/rshome-mcp/src/: daemon.rs  error.rs  lib.rs  resources.rs  runtime.rs
crates/rshome-native-api/: Cargo.toml
crates/rshome-native-api/proto/: api.options  api.proto
crates/rshome-native-api/src/: codec.rs  command_dispatch.rs  connection.rs  entity_list.rs  error.rs  fnv.rs  lib.rs  mdns.rs  msg_types.rs  server.rs  state_push.rs
crates/rshome-native-api/src/proto_gen/: esphomelib.rs  mod.rs
crates/rshome-native-api/tests/: api_tests.rs
crates/rshome-schema/: Cargo.toml
crates/rshome-schema/src/: assembly.rs  entity.rs  export.rs  feature_flags.rs  graph.rs  ha_export.rs  lib.rs  module.rs  orchestration.rs  pin.rs  platform.rs  profile.rs  registry.rs  solution.rs  solution_legacy.rs  wasm_bindings.rs
crates/rshome-schema/tests/: property_form_factor_meta_completeness.rs  solution_definition_shape.rs  solution_legacy_shim.rs
crates/rshome-schema/tests/fixtures/: legacy_implementation_family_inputs.json  v1_solutions_corpus.json
crates/rshome-state/: Cargo.toml
crates/rshome-state/src/: history.rs  lib.rs  snapshot.rs  store.rs
crates/rshome-state/tests/: state_tests.rs
crates/rshome-svc/: Cargo.toml
crates/rshome-svc/src/: builtin.rs  dispatch.rs  lib.rs  messages.rs  registry.rs  target.rs
crates/rshome-svc/tests/: service_tests.rs
crates/rshome-wasm-host/: Cargo.toml
crates/rshome-wasm-host/src/: capability.rs  config_flow.rs  context.rs  coordinator.rs  diagnostics.rs  discovery.rs  domain_lowering.rs  entity_bridge.rs  guest.rs  host_actor.rs  integration_actor.rs  lib.rs  repairs.rs  sdk_gen.rs  service_bridge.rs
crates/rshome-wasm-host/wit/: rshome-integration.wit
crates/rshome-wf/: Cargo.toml
crates/rshome-wf/src/: definition.rs  engine.rs  lib.rs  pipeline.rs  rtc.rs
crates/rshome-wizard/: Cargo.toml
crates/rshome-wizard/benches/: export_registry.rs  validate_workspace.rs  wizard_step.rs
crates/rshome-wizard/src/: bindings.rs  export.rs  lib.rs  pin_conflict.rs  pin_map.rs  types.rs  wasm_bindings.rs  workspace.rs
crates/rshome-wizard/tests/: va_chain_presence.rs  va_chip_coverage_presence.rs  va_chip_floor.rs  va_companion_link_presence.rs  va_failsafe_presence.rs  va_failsafe_roundtrip.rs  va_form_factor_families.rs  va_grid_coverage.rs  va_motor_backend_dispatch.rs  va_orchestration_trace.rs  va_parameter_schema_pilot.rs  va_pin_conflict.rs  va_radio_priority.rs  va_required_sensors_presence.rs  va_retry_policy.rs  va_sensor_tier_floor.rs  va_solution_definition_shape.rs  va_topology_category_presence.rs  va_user_parameters_presence.rs  va_variant_presence.rs  va_wizard_walkthroughs.rs  va_workspace_compat.rs
crates/rshome-wizard/tests/fixtures/: effective_uplink_golden.json  form_factor_kind_corpus.json  gcs_user_parameters_golden.json  topology_meta_golden.json  variant_conflicts.json  watchdog_ladder.csv  workspace_10profiles.json
docs/sdk/: public-contract.md
scripts/: release-sdk-metadata.sh  test-public-boundary.sh  test-public-history-promisor-clone.sh  test-public-history.sh  test-sdk-contract.sh  verify-public-boundary.sh  verify-public-history.sh  verify-sdk-contract.sh
sdk/: zt-edge-sdk-v0.1.0.toml
sdk/releases/: zt-edge-sdk-v0.1.0.toml
