[workspace]
members = [
    "crates/rshome-schema",
    "crates/rshome-config",
    "crates/rshome-codegen",
    "crates/rshome-mcp",
    "crates/rshome-wizard",
    "crates/rshome-actor",
    "crates/rshome-entity",
    "crates/rshome-state",
    "crates/rshome-svc",
    "crates/rshome-device-link",
    "crates/rshome-native-api",
    "crates/rshome-wasm-host",
    "crates/rshome-wf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["rshome SDK contributors"]
publish = false

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
flume = "0.11"
futures = "0.3"
juniper = { version = "0.16", default-features = false }
mdns-sd = "0.11"
parking_lot = "0.12"
petgraph = "0.6"
proptest = "1.6"
prost = "0.13"
redb = "2.2"
rmcp = { version = "0.3", features = ["server", "macros", "transport-io", "transport-async-rw"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
thiserror = "1.0"
tokio = { version = "1.41", features = ["process", "io-util", "time", "sync", "macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1.11", features = ["v7", "serde", "js"] }
