[package]
name = "rshome-actor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
