[package]
name = "rshome-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Public in-memory ESP-IDF project skeleton generator for rshome"

[dependencies]
rshome-config = { path = "../rshome-config" }
rshome-schema = { path = "../rshome-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
rshome-schema = { path = "../rshome-schema" }
