[package]
name = "rshome-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "10-stage config validation pipeline for rshome (yet-another-esphome)"

[lib]
# cdylib = shared library for wasm-pack; rlib = normal Rust linkage for native use.
crate-type = ["cdylib", "rlib"]

[features]
# Enable wasm-bindgen exports when building for browser.
wasm = ["dep:wasm-bindgen"]

[dependencies]
rshome-schema = { path = "../rshome-schema", features = ["dag"] }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

# Optional: wasm export surface
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde_json.workspace = true
