[package]
name = "rshome-native-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
rshome-actor  = { path = "../rshome-actor" }
rshome-entity = { path = "../rshome-entity" }
rshome-state  = { path = "../rshome-state" }
rshome-svc    = { path = "../rshome-svc" }
prost         = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
futures       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
serde_json    = { workspace = true }
mdns-sd       = { workspace = true }
parking_lot   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
