[package]
name = "rshome-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Component registry, entity types, platform definitions for rshome (yet-another-esphome)"

[lib]
# cdylib = shared library for wasm-pack; rlib = normal Rust linkage for native use.
crate-type = ["cdylib", "rlib"]

[features]
# Enable wasm-bindgen exports when building for browser.
wasm = ["dep:wasm-bindgen"]
# GraphQL schema export (Phase 6).
graphql = ["dep:juniper"]
# DAG-based graph types (excluded from WASM builds to avoid binary bloat).
dag = ["dep:petgraph"]

[dependencies]
serde = { workspace = true }
serde_json.workspace = true
schemars = { workspace = true }
thiserror.workspace = true
tracing = { workspace = true }
petgraph = { workspace = true, optional = true }

# Optional: wasm export surface
wasm-bindgen = { version = "0.2", optional = true }
# Optional: GraphQL schema
juniper = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
