[package]
name = "rshome-svc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
rshome-actor = { path = "../rshome-actor" }
rshome-entity = { path = "../rshome-entity" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
rshome-state = { path = "../rshome-state" }
