[package]
name = "rshome-wasm-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "WASM integration host for rshome-ha — loads and runs guest integrations"

[dependencies]
rshome-actor = { path = "../rshome-actor" }
rshome-entity = { path = "../rshome-entity" }
rshome-svc = { path = "../rshome-svc" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap = "6"
bitflags = "2"
wasmtime = { version = "27", features = ["component-model"] }
wasmtime-wasi = "27"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
