[package]
name = "rshome-wf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Workflow engine — pipeline and run-to-completion actors for rshome-ha"

[dependencies]
rshome-actor  = { path = "../rshome-actor" }
rshome-entity = { path = "../rshome-entity" }
rshome-svc    = { path = "../rshome-svc" }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
uuid          = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
